Correction contrast ratio

--- a/css/style.css
+++ b/css/style.css
@@ -777,12 +777,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FBA079!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #212121!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -1066,6 +1066,7 @@ strong {
     font-weight: 500;
     line-height: 20px;
     opacity:0.7;
+    color:#212121;
 }
 
 p {
